fix: css z-index

--- a/src/components/css/Webcam.css
+++ b/src/components/css/Webcam.css
@@ -6,6 +6,7 @@ body {
 
 div.btn-wrapper {
     position: fixed;
+    z-index: 9999;
     bottom: 0px;
     display: flex;
     flex-direction: row;
@@ -13,15 +14,14 @@ div.btn-wrapper {
     justify-content: space-between;
 }
 button.btn {
-    z-index: 9999;
     font-size: x-small;
     flex-grow: 1;
 }
-button.btn-capture {
-}
-
-button.btn-slides {
-}
+/* button.btn-capture { */
+/* } */
+/**/
+/* button.btn-slides { */
+/* } */
 
 img.ghost {
     position: absolute;
